--- a/package.json
+++ b/package.json
@@ -1,34 +1,38 @@
 {
-  "name": "my-new-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "aos": "^2.3.4",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "styled-components": "^6.1.19",
-    "swiper": "^12.0.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@types/styled-components": "^5.1.34",
-    "@vitejs/plugin-react": "^5.0.0",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "sass-embedded": "^1.92.1",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
-  }
+    "name": "my-new-app",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "homepage": "https://ijieun0123.github.io/mini/",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "deploy": "gh-pages -d dist"
+    },
+    "dependencies": {
+        "aos": "^2.3.4",
+        "gh-pages": "^6.3.0",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
+        "styled-components": "^6.1.19",
+        "swiper": "^12.0.1"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.33.0",
+        "@types/aos": "^2.3.4",
+        "@types/react": "^19.1.10",
+        "@types/react-dom": "^19.1.7",
+        "@types/styled-components": "^5.1.34",
+        "@vitejs/plugin-react": "^5.0.0",
+        "eslint": "^9.33.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.20",
+        "globals": "^16.3.0",
+        "sass-embedded": "^1.92.1",
+        "typescript": "~5.8.3",
+        "typescript-eslint": "^8.39.1",
+        "vite": "^7.1.2"
+    }
 }
